compiler/tests/fixtures/invalid/semantics/plan_missing_phases.viv
// Plan with no phases field — should be rejected

plan incomplete:
    roles:
        @actor:
            as: character
